add docs and readme, add passenger count parameters
